# swarm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: tui-architecture.md
profiles/: default.md
src/: main.rs
src/agent_tui/: app.rs  events.rs  markdown.rs  mod.rs  render.rs
src/core/: agent.rs  agent_status.rs  git.rs  ipc.rs  log.rs  merge.rs  mod.rs  modifier.rs  profile.rs  review.rs  runner.rs  shell.rs  socket_listener.rs  state.rs  tmux.rs
src/daemon/: agent_supervisor.rs  managed_agent.rs  mod.rs  protocol.rs  socket_server.rs
src/daemon_tui/: app.rs  mod.rs  render.rs  socket_client.rs
src/tui/: app.rs  mod.rs  picker.rs  pr_popup.rs  render.rs  theme.rs
tests/: daemon_connection.rs
