[package]
name = "swarm"
version = "0.1.0"
edition.workspace = true
description = "Run agents in parallel. Worktrees + tmux + vibes."
license.workspace = true
repository = "https://github.com/ApiariTools/swarm"

[dependencies]
apiari-common.workspace = true
apiari-claude-sdk.workspace = true
apiari-codex-sdk.workspace = true
ratatui.workspace = true
crossterm.workspace = true
color-eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
dirs = "6"
chrono.workspace = true
uuid.workspace = true
clap.workspace = true
pulldown-cmark = "0.13"
libc.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
mockall = "0.12"
tokio-test = "0.4"
